Fix fourth-round audit findings + normalize line endings to LF
Apply all 13 findings from the Spring Boot 4.1.0 migration audit:

- Jackson: remove scanner false positive on spring.jackson.read/write.*;
  reframe the migration doc around the real 4.1 property families
- Version pins 4.0 -> 4.1 across features, patterns, migration guide,
  SKILL.md, README, and tests
- Spring Modulith 2.0.x -> 2.1.x (the Boot 4.1 pairing)
- Hibernate 7.4.1.Final; hypersistence-utils -hibernate-73 (3.15.3)
- StructuredTaskScope example -> JDK 25 open(Joiner.allSuccessfulOrThrow())
  (marked preview / --enable-preview)
- OrderNumber.generate() now satisfies its ^ORD-\d{8}$ constructor check
- KDF migration note: JEP 510 ships HKDF only; PBKDF2 stays on SecretKeyFactory
- @ManyToMany guidance made spec-accurate (join entity when the link has data)
- Testcontainers 2.0 GA date corrected to Oct 14, 2025
- Fix resttestclient-test.java reference and the RestTestClient heading
- query-service.java uses Spring Data PageImpl (drops shadowing record Page<T>)
- Add the 4.0 -> 4.1 delta note (spring.data.jpa.repositories.bootstrap-mode)
- Doc nits: plural package guidance, define ProductWithStatsVM,
  CourseWrong -> Course, tests/README + QUICKSTART corrections

Also fix the relationships.md @ManyToMany TOC anchor and a duplicated code fence.

Normalize all tracked files to LF and add .gitattributes (* text=auto eol=lf)
to prevent CRLF regression.

Parameterize the docker-compose Postgres password (and the commented MySQL /
application.yml examples) to env vars with no hardcoded defaults, so the
template ships no credential literal.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>